OpenShift/skill_based/1_welcome/resolution/httpd_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: welcome
  name: welcome-app
  namespace: rh1-welcome
spec:
  selector:
    matchLabels:
      deployment: welcome
  template:
    metadata:
      labels:
        deployment: welcome
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/httpd
        imagePullPolicy: IfNotPresent
        name: rh1-welcome
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        volumeMounts:
        - name: www-contents
          mountPath: /var/www/html/index.html
          subPath: index.html
      volumes:
      - name: www-contents
        configMap:
          name: www-contents
