OpenShift/skill_based/1_welcome/resolution/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: welcome
  name: welcome-route
  namespace: rh1-welcome
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: welcome-svc
    weight: 100
  wildcardPolicy: None
